Improve client threading